// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile n huge 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.IS1 {
  color: rgba(255,255,255,1.00);
  font-size: 20px;
  line-height: 20px;
  margin-bottom: 11px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "paddingHorizontal": 12,
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile n medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.IS1 {
  color: rgba(255,255,255,1.00);
  font-size: 18px;
  line-height: 18px;
  margin-bottom: 11px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "paddingHorizontal": 12,
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile n small 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.IS1 {
  color: rgba(255,255,255,1.00);
  font-size: 18px;
  line-height: 18px;
  margin-bottom: 11px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "paddingHorizontal": 12,
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile n wide 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.IS1 {
  color: rgba(255,255,255,1.00);
  font-size: 20px;
  line-height: 20px;
  margin-bottom: 11px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "paddingHorizontal": 12,
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile n with default star 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.IS1 {
  color: rgba(255,255,255,1.00);
  font-size: 18px;
  line-height: 18px;
  margin-bottom: 11px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "paddingHorizontal": 12,
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;
